# VariadicTemplateAlgorithms

./: .travis.yml  API_REFERENCE.md  CMakeLists.txt  DOCUMENTATION.md  README.md
examples/: CMakeLists.txt  concat.cpp  reverse_polish.cpp  safe_mean.cpp  switch_bools.cpp
include/: CMakeLists.txt
include/vta/: algorithms.hpp
tests/: CMakeLists.txt  algorithms.cpp  main.cpp
