cmake_minimum_required (VERSION 2.6)
project(VariadicTemplateAlgorithms)
set(VariadicTemplateAlgorithms_VERSION_MAJOR 0)
set(VariadicTemplateAlgorithms_VERSION_MINOR 1)
add_subdirectory(examples)
add_subdirectory(include)
add_subdirectory(tests)
enable_testing()
add_test(NAME unit_tests COMMAND unit_tests)
